syntax = "proto3";
package zetachain.zetacore.zetacore;

option go_package = "github.com/zeta-chain/zetacore/x/zetacore/types";

message TxHashList {
  string txHash = 1;
  string singer = 2;
}
message OutTxTracker {
  string index = 1; // format: "chain:nonce"
  string chain = 2;
  string nonce = 3;
  repeated TxHashList hashList = 4;
}


